--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,6 @@ dist: trusty
 
 matrix:
   include:
-    - php: 5.3
-      dist: precise
-    - php: 5.4
-    - php: 5.5
-    - php: 5.6
     - php: 7.0
     - php: 7.1
     - php: 7.2
@@ -29,7 +24,7 @@ matrix:
 sudo: false
 
 install:
-  - composer install --no-interaction
+  - composer update --no-interaction
 
 script:
   - vendor/bin/phpunit --coverage-text
