--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         "symfony/console": "^5.0 || ^4.0 || ^3.0 || ^2.1"
     },
     "require-dev": {
-        "clue/phar-composer": "^1.1",
+        "wol-soft/phar-composer": "dev-master",
         "phpunit/phpunit": "^4.8.36"
     },
     "autoload": {
@@ -26,5 +26,11 @@
     },
     "scripts": {
         "build": "@php build.php"
-    }
+    },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "https://github.com/wol-soft/phar-composer"
+        }
+    ]
 }
